--- a/calc.html
+++ b/calc.html
@@ -27,8 +27,8 @@
 							<div class="row form-group">
 								<div class="col-xs-12 col-sm-12">
 									<div class="result-con "><label id="history" class="pull-right"></label></div>
-									<input type="text" autofocus value="" id="calnumber" class="form-control text-right">
-									<input type="text" value="" id="result" class="form-control text-right hidden">
+									<input type="text" value="" id="result" class="form-control text-right hidden">									
+									<input type="text" autofocus value="" id="calnumber" class="form-control text-right">						
 								</div>								
 							</div>	
 							<div class="row form-group">
@@ -98,7 +98,7 @@
 									<input type="button"  value="." id="cal_dot" class="btn btn-default form-control btn-operator">
 								</div>
 								<div class="col-xs-3 col-sm-3">
-									<input type="button"  value="=" id="cal_enter" class="btn btn-default form-control btn-operator">
+									<input type="button" onclick="opration(13);"  value="=" id="cal_enter" class="btn btn-default form-control btn-operator">
 								</div>
 							</div>
 						</div>						
