--- a/calc.html
+++ b/calc.html
@@ -28,7 +28,7 @@
 								<div class="col-xs-12 col-sm-12">
 									<div class="result-con "><label id="history" class="pull-right"></label></div>
 									<input type="text" value="" id="result" class="form-control text-right hidden">									
-									<input type="text" autofocus value="" id="calnumber" class="form-control text-right">						
+									<input onkeyup="return isNumber(event)" type="text" autofocus value="" id="calnumber" class="form-control text-right">						
 								</div>								
 							</div>	
 							<div class="row form-group">
