--- a/calc.html
+++ b/calc.html
@@ -33,13 +33,13 @@
 							</div>	
 							<div class="row form-group">
 								<div class="col-xs-3 col-sm-3">
-									<input type="button"  value="CE" id="cal_CE" class="btn btn-default form-control btn-operator">
+									<input type="button" onclick="opration(46);"  value="CE" id="cal_CE" class="btn btn-default form-control btn-operator">
 								</div>
 								<div class="col-xs-3 col-sm-3">
-									<input type="button"  value="C" id="cal_C" class="btn btn-default form-control btn-operator">
+									<input type="button" onclick="opration(27);" value="C" id="cal_C" class="btn btn-default form-control btn-operator">
 								</div>
 								<div class="col-xs-3 col-sm-3">
-									<input type="button"  value="<" id="cal_back" class="btn btn-default form-control btn-operator">
+									<input type="button" onclick="opration(8);"  value="<" id="cal_back" class="btn btn-default form-control btn-operator">
 								</div>
 								<div class="col-xs-3 col-sm-3">
 									<input type="button" onclick="opration(111);"  value="/" id="cal_div" class="btn btn-default form-control btn-operator">
